--- a/luminate-app/package.json
+++ b/luminate-app/package.json
@@ -11,9 +11,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "date-fns": "^2.25.0",
+    "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "set-value": "^4.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
